--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,9 @@
 // Colors
 $dark-grey: #333333;
+$blue: rgb(0, 132, 255);
+$dark-blue: #364051;
+// Font Size
+$font-size-large: 1.8rem;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
